--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           GIT_USER: git
         run: |
           git config --global user.email "sven.c.kang@gmail.com"
-          git config --global user.name "Sven Kang"
+          git config --global user.name "svenkang"
           if [ -e yarn.lock ]; then
           yarn install --frozen-lockfile
           elif [ -e package-lock.json ]; then
